# thods

./: README.md  pyproject.toml
cplusplus/: README.md  conanfile.py
cplusplus/conan/: conanfile.py  pyproject.toml
cplusplus/xmake/cli/: compile_commands.json  xmake.lua
cplusplus/xmake/cli/src/: main.cpp
julia/: Manifest.toml  Project.toml  main.jl
julia/src/: thod_julia.jl
julia/src/filter/: filter.jl
julia/src/julia_as_second_language/ch8/parts/: flexy_tank.jl  tanks.jl
julia/src/julia_as_second_language/ch9/: angle.jl
python/: 14-linAlg-basicVector.py  README.md  pyproject.toml
python/thods/: stopwatch.py
templates/: xmake.lua
templates/src/: main.cpp
templates/src/chapter1/: 1.1_decltype.hpp  1.1_default-argument.hpp  1.1_max-function.hpp
thods/: __main__.py
