[tool.poetry]
name = "thods"
version = "0.1.0"
description = ""
authors = ["Ahsanu Amala <caasperahsanuamala5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
textual = "^0.89.1"
textual-dev = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
